Update projects configuration

--- a/src/main/resources/lra-service.properties
+++ b/src/main/resources/lra-service.properties
@@ -1,4 +1,3 @@
-orderservice.post=http://order-service-myproject.`minishift ip`.nip.io/api/order
-orderservice.get=http://order-service-myproject.`minishift ip`.nip.io/api/orders
-shipmentservice.get=http://shipment-service-myproject.`minishift ip`.nip.io/api/shipments
-invoiceservice.get=http://invoice-service-myproject.`minishift ip`.nip.io/api/invoices
+orderservice.post=http://localhost:8080/api/order
+orderservice.get=http://localhost:8080/api/orders
+
